# ratemymusic

./: .gitignore  Makefile  README.md  go.mod  go.sum
album/client/: song_client.go
album/cmd/: main.go
album/pkg/config/: config.go
album/pkg/db/: db.go
album/pkg/models/: album.go
album/pkg/services/: service.go
album/pkg/utils/: mapper.go
api-gateway/: Makefile
api-gateway/cmd/: main.go
api-gateway/pkg/: cors.go
api-gateway/pkg/album/: client.go  routes.go
api-gateway/pkg/auth/: client.go  middleware.go  routes.go
api-gateway/pkg/collection/: client.go  routes.go
api-gateway/pkg/comment/: client.go  routes.go
api-gateway/pkg/config/: config.go
api-gateway/pkg/musician/: client.go  routes.go
api-gateway/pkg/rating/: client.go  routes.go
api-gateway/pkg/review/: client.go  routes.go
api-gateway/pkg/song/: client.go  routes.go
auth/cmd/: main.go
auth/pkg/config/: config.go
collection/cmd/: main.go
comment/: .env  Cargo.toml  build.rs
comment/migrations/2022-08-17-094235_comments/: up.sql
comment/migrations/2022-08-17-181537_comments/: down.sql  up.sql
comment/migrations/2022-08-22-122543_reports/: down.sql  up.sql
comment/proto/: comment.proto
comment/src/: client.rs  comment_ops.rs  models.rs  report_ops.rs  schema.rs  server.rs
common/: Makefile
front/: README.md  angular.json  package-lock.json  package.json
musician/cmd/: main.go
rating/cmd/: main.go
review/cmd/: main.go
song/: Dockerfile  Makefile
song/client/: musician_client.go
song/cmd/: main.go
songs/cmd/: main.go
streaming/: id
(+253 files in other folders)
